code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Sep-2010 Ian MacLennan
 # [#22086] Inconsistency with files installer return type
 # [#22301] Adding new group has a notice message, not a normal message
 # [#22352] Module cache calls - PHP 5.3.x warnings
 # [#22376] Undefined $canEdit in Hathor Categories view

10-Sep-2010 Jean-Marie Simonet
 # [#22334] Recent articles featured. Thanks Amy.
 $ [#22357] Patch: Step 5 FTP - Header text too wide. Thanks Ole.
 # [#22350] Banner Manager order TABS inconsistency.
 # [#22303] components - css - class and id corrections. Thanks Bill and Angie.
 $ [#22359] com content - blog - readmore - wrong string. Thanks Bill.

09-Sep-2010 Jean-Marie Simonet
 # [#22319] American english spelling in en-GB language files. Thanks Bill.
 # [#22320] <br> <br/> <br />. Thanks Amy and Bill.
 # [#22328] Database prefix error when other than jos_. Thanks Michael.

08-Sep-2010 Andrew Eddie
 # Fixed issue [#22274] Mark items as required that prevent save (Michael Babker).
 # Fixed issue [#21902] Cannot assign template style to components [cache] (Jen Kramer McKibben, Klas Berlič1).
 # Fixed issue [#21447] Updated: Add ACL Create, Edit, & Edit State checks to Category Manager (Michael Babker, Elin Waring).
 # Changed default caching level to disabled on installation.
 # Fixed issue [#22171] Cannot edit a group to change parent once it is created (Jennifer Marriott, Amy Stephen).
 # Fixed issue [#20932] com_categories CategoryParent Field Permissions Check Additions (Omar Ramos).
 # Fixed issue [#22222] Newsflash inopérant (C. Tapuscrine, Omar Ramos, Bill Richardson, Michael Babker).
 # Fixed issue [#22322] Inappropriate language in code (Amy Stephen).
 # Fixed issue [#22095] Userfield shows button even when "readonly" (Thomas Hunziker, Michael Babker).
 # Fixed issue [#22185] beez2 missing level 4 image (Klas Berlič1, Angie Radtke).